--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     ]
   },
   "dependencies": {
-    "svelte": "^3.24.0"
+    "svelte": "3.24.0"
   },
   "devDependencies": {
+    "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
@@ -46,8 +47,10 @@
     "open": "^7.0.4",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
-    "svelte-loader": "^2.13.6",
+    "style-loader": "^1.2.1",
+    "svelte-loader-hot": "^0.3.0",
     "webpack": "^4.43.0",
-    "webpack-dev-middleware": "^3.7.2"
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
