--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     ]
   },
   "dependencies": {
-    "svelte": "3.24.0"
+    "bootstrap": "^4.5.0",
+    "minireset.css": "^0.0.6",
+    "svelte": "3.24.0",
+    "sveltestrap": "^3.4.0"
   },
   "devDependencies": {
     "css-loader": "^3.6.0",
