--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "style-loader": "^1.2.1",
     "svelte-loader-hot": "^0.3.0",
     "webpack": "^4.43.0",
-    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-middleware": "^4.0.0-rc.2",
     "webpack-hot-middleware": "^2.25.0"
   }
 }
