--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "prettier-plugin-svelte": "^1.1.0",
     "style-loader": "^1.2.1",
     "svelte-loader-hot": "^0.3.0",
-    "webpack": "^4.43.0",
+    "webpack": "^5.0.0-beta.22",
     "webpack-dev-middleware": "^4.0.0-rc.2",
     "webpack-hot-middleware": "^2.25.0"
   }
