--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a repo to follow along with the guide on svelte.dev",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "node tools/start.js"
+    "start": "node tools/start.js",
+    "build": "webpack --config=webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -39,20 +40,25 @@
     "sveltestrap": "^3.4.0"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "express": "^4.17.1",
+    "file-loader": "^6.0.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "open": "^7.0.4",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
     "style-loader": "^1.2.1",
+    "svelte-loader": "^2.13.6",
     "svelte-loader-hot": "^0.3.0",
-    "webpack": "^5.0.0-beta.22",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^4.0.0-rc.2",
     "webpack-hot-middleware": "^2.25.0"
   }
