--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-plugin-import": "^2.22.0",
@@ -49,6 +48,7 @@
     "eslint-plugin-svelte3": "^2.7.3",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "open": "^7.0.4",
