--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "svelte-loader-hot": "^0.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^4.0.0-rc.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^5.0.9"
   }
 }
