--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-svelte3": "^2.7.3",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
