--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "express": "^4.17.1",
+    "favicons-webpack-plugin": "^3.0.1",
     "file-loader": "^6.0.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.3.0",
