--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sveltestrap": "^3.4.0"
   },
   "devDependencies": {
+    "bundle-stats-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
