--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     ]
   },
   "dependencies": {
-    "bootstrap": "^4.5.0",
-    "minireset.css": "^0.0.6",
     "svelte": "3.24.0",
     "sveltestrap": "^3.4.0"
   },
@@ -54,6 +52,7 @@
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "mini-css-extract-plugin": "^0.9.0",
     "open": "^7.0.4",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
@@ -63,6 +62,7 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
+    "webpack-fix-style-only-entries": "^0.5.1",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.0.9"
   }
