--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
     "open": "^7.0.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
     "style-loader": "^1.2.1",
