ADD: capacity to serve production build locally for lighthouse auditing.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "node tools/start.js",
+    "start:prod": "node tools/startProd.js",
     "build": "webpack --config=webpack.config.prod.js"
   },
   "repository": {
