--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "start": "node tools/start.js",
     "start:prod": "node tools/startProd.js",
-    "build": "webpack --config=webpack.config.prod.js"
+    "build": "webpack --config=webpack.config.prod.js",
+    "preinstall": "npx only-allow pnpm"
+  },
+  "engines": {
+    "node": ">=14.5.0",
+    "pnpm": ">=5.4.0"
   },
   "repository": {
     "type": "git",
