--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
+    "spdy": "^4.0.2",
     "style-loader": "^1.2.1",
     "svelte-loader": "^2.13.6",
     "svelte-loader-hot": "^0.3.0",
