--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "node tools/start.js",
-    "start:prod": "node tools/startProd.js",
+    "start:prod": "pnpm run build && node tools/startProd.js",
     "build": "webpack --config=webpack.config.prod.js",
     "preinstall": "npx only-allow pnpm"
   },
