--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node tools/start.js",
     "start:prod": "pnpm run build && node tools/startProd.js",
     "build": "webpack --config=webpack.config.prod.js",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "test": "jest src"
   },
   "engines": {
     "node": ">=14.5.0",
@@ -26,7 +27,8 @@
   "homepage": "https://github.com/dethereum/svelte-tutorial#readme",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "pnpm run test"
     }
   },
   "lint-staged": {
@@ -46,6 +48,9 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@sucrase/jest-plugin": "^2.0.0",
+    "@testing-library/svelte": "^3.0.0",
+    "@types/jest": "^26.0.4",
     "bundle-stats-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
@@ -59,6 +64,8 @@
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
+    "jest": "^26.1.0",
+    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
     "open": "^7.0.4",
@@ -69,6 +76,7 @@
     "purgecss-from-svelte": "^2.0.2",
     "spdy": "^4.0.2",
     "style-loader": "^1.2.1",
+    "svelte-jester": "^1.0.6",
     "svelte-loader": "^2.13.6",
     "svelte-loader-hot": "^0.3.0",
     "webpack": "^4.43.0",
