--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
     "purgecss-from-svelte": "^2.0.2",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
     "spdy": "^4.0.2",
     "svelte-jester": "^1.0.6",
     "svelte-loader": "^2.13.6",
