--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "svelte-jester": "^1.0.6",
     "svelte-loader": "^2.13.6",
     "svelte-loader-hot": "^0.3.0",
+    "svelte-preprocess": "^4.0.8",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
