IMPROVE: centralize all svelte scss configuration.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "a repo to follow along with the guide on svelte.dev",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "node tools/start.js",
-    "start:prod": "pnpm run build && node tools/startProd.js",
-    "build": "webpack --config=webpack.config.prod.js",
+    "start": "babel-node tools/start.js",
+    "start:prod": "pnpm run build && babel-node tools/startProd.js",
+    "build": "babel-node tools/build.js",
     "preinstall": "npx only-allow pnpm",
     "test": "jest src"
   },
@@ -48,6 +48,9 @@
     "sveltestrap": "^3.5.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@sucrase/jest-plugin": "^2.0.0",
     "@testing-library/svelte": "^3.0.0",
@@ -58,6 +61,7 @@
     "eslint": "^7.4.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
     "eslint-plugin-svelte3": "^2.7.3",
     "express": "^4.17.1",
     "favicons-webpack-plugin": "^3.0.1",
@@ -78,12 +82,12 @@
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "spdy": "^4.0.2",
+    "style-loader": "^1.2.1",
     "svelte-jester": "^1.0.6",
     "svelte-loader": "^2.13.6",
     "svelte-loader-hot": "^0.3.0",
     "svelte-preprocess": "^4.0.8",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-fix-style-only-entries": "^0.5.1",
     "webpack-hot-middleware": "^2.25.0",
