--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "a repo to follow along with the guide on svelte.dev",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "babel-node tools/start.js",
-    "start:prod": "pnpm run build && babel-node tools/startProd.js",
-    "build": "babel-node tools/build.js",
+    "start": "node tools/start.js",
+    "start:prod": "pnpm run build && node tools/startProd.js",
+    "build": "node tools/build.js",
     "preinstall": "npx only-allow pnpm",
     "test": "jest src"
   },
@@ -48,9 +48,6 @@
     "sveltestrap": "^3.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/node": "^7.10.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@sucrase/jest-plugin": "^2.0.0",
     "@testing-library/svelte": "^3.0.0",
@@ -61,7 +58,6 @@
     "eslint": "^7.4.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-simple-import-sort": "^5.0.3",
     "eslint-plugin-svelte3": "^2.7.3",
     "express": "^4.17.1",
     "favicons-webpack-plugin": "^3.0.1",
