--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "jest-transform-stub": "^2.0.0",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
+    "miragejs": "^0.1.40",
     "open": "^7.0.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
